docs: Add open source documentation and development tools
- Add dual licensing (GPLv3 + Commercial)
- Add comprehensive README with usage guide
- Add DEVELOPER.md with TDD workflow and architecture
- Add ROADMAP.md with user stories and future plans
- Add scc-benchmark for server-side performance testing
- Add scc-perf-client for client-side network diagnostics
- Add scc-dev development server (reads files from disk)
- Update .gitignore for CSV and log files

--- a/.gitignore
+++ b/.gitignore
@@ -12,9 +12,11 @@ contact-handler/target/
 Thumbs.db
 
 # Local data files (contain user submissions)
-contacts.csv
-service_inquiries.csv
+*.csv
 accounts.txt
+
+# Log files
+*.log
 
 # Android build
 android-app/app/build/
