--- a/contact-handler/Cargo.toml
+++ b/contact-handler/Cargo.toml
@@ -11,6 +11,7 @@ desktop = ["wry", "tao"]
 [dependencies]
 actix-web = { version = "4", features = ["compress-gzip", "compress-brotli"] }
 actix-cors = "0.7"
+actix-files = "0.6"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 chrono = "0.4"
