feat: Add bilingual support with browser/system language detection
- Add Spanish translations for all documentation (README, WHITEPAPER,
  DEVELOPER, ROADMAP, PERFORMANCE_TESTING)
- Create sync-docs.sh script to generate HTML documentation pages
- Generate bilingual HTML docs with language switcher flags
- Show only OTHER language flag (Mexican 🇲🇽 on EN, American 🇺🇸 on ES)
- Add browser language auto-detection on first visit
- Desktop app detects system language via sys-locale crate
- Add setup scripts for dev environments (Ubuntu, Windows) and production

--- a/contact-handler/Cargo.toml
+++ b/contact-handler/Cargo.toml
@@ -6,7 +6,7 @@ description = "South City Computer - Single binary web server with embedded asse
 
 [features]
 default = []
-desktop = ["wry", "tao"]
+desktop = ["wry", "tao", "sys-locale"]
 
 [dependencies]
 actix-web = { version = "4", features = ["compress-gzip", "compress-brotli"] }
@@ -25,6 +25,7 @@ mime_guess = "2"
 # Desktop app dependencies (optional)
 wry = { version = "0.35", optional = true }
 tao = { version = "0.24", optional = true }
+sys-locale = { version = "0.3", optional = true }
 
 [profile.release]
 opt-level = 3
